--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "javascript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "pwd": "^1.1.0"
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
